appId: "${APP_ID}"
name: "reviewAndConfirmDetailsTestFlow"
# Suite: ReviewAndConfirmDetails
# Consolidated test flow for ReviewAndConfirmDetails screen
# Contains 58 test case(s):
---
- launchApp: {}
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-IntroductionFirstScreen_Cta_Login_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-IntroductionFirstScreen_Cta_Login_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "00571aad-bed9-46f5-991e-94d0805872a7"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-LoginScreen_Cta_Login_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-LoginScreen_Cta_Login_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "68526003-8aad-4122-8991-06771f332513"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLite_Cta_Open_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLite_Cta_Open_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "a2d65a31-9542-4b7e-9228-c730e6669899"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-EligibilityRequirement_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-EligibilityRequirement_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "aa76eab4-8026-480a-ba2a-91e5336db92c"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-DataClasificationOpenAccount_Cta_LetSstart_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-DataClasificationOpenAccount_Cta_LetSstart_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "2fa9b715-f553-440b-bf7d-519f8a12e053"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-IdentityIdcardPhoto_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-IdentityIdcardPhoto_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "c6323571-23da-4d1c-b075-a967be93ca2e"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationAddress_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationAddress_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "4c82546c-8aaf-4f78-8200-069e6ed2a930"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationSelfie_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationSelfie_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "cd9257f4-7a06-4f8c-8188-56407a5f55a8"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationDetails_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationDetails_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "9c49d4f7-740d-4930-9602-4131b3e63c76"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationEmlpoyement_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationEmlpoyement_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "51dc64b4-0c2b-49e6-b6bd-9dadeb1060f9"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationPurpose_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationPurpose_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "d6aedeed-3578-4c57-85e1-7fc3294dd17c"
    optional: true
# 1. Verify widget ASAppBar:ReviewAndConfirmDetails_AppBar_AppBarAsappHeader_AppBar is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_AppBar_AppBarAsappHeader_AppBar renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-ReviewAndConfirmDetails_AppBar_AppBarAsappHeader_AppBar"
- waitForAnimationToEnd: {}
# 2. Verify widget ASAppBar:ReviewAndConfirmDetails_AppBar_AppBarAsappHeader_AppBar is displayed on the screen: Verifies that the label of widget:ReviewAndConfirmDetails_AppBar_AppBarAsappHeader_AppBar appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-ReviewAndConfirmDetails_AppBar_AppBarAsappHeader_AppBar"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-ReviewAndConfirmDetails_AppBar_AppBarAsappHeader_AppBar"
- waitForAnimationToEnd: {}
# 3. Verify widget ASText:ReviewAndConfirmDetails_Label_UserName_Text is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Label_UserName_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_UserName_Text"
- waitForAnimationToEnd: {}
# 4. Verify widget ASText:ReviewAndConfirmDetails_Label_UserName_Text is displayed on the screen: Verifies that the label of widget:ReviewAndConfirmDetails_Label_UserName_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_UserName_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_UserName_Text"
- waitForAnimationToEnd: {}
# 5. Verify widget ASProgressBar:ReviewAndConfirmDetails_Container_ProgressBarAsp_ProgressBar is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Container_ProgressBarAsp_ProgressBar renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Container_ProgressBarAsp_ProgressBar"
- waitForAnimationToEnd: {}
# 6. Verify widget ASText:ReviewAndConfirmDetails_Label_ReviewAndConfirmYourDetai_Text is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Label_ReviewAndConfirmYourDetai_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_ReviewAndConfirmYourDetai_Text"
- waitForAnimationToEnd: {}
# 7. Verify widget ASText:ReviewAndConfirmDetails_Label_ReviewAndConfirmYourDetai_Text is displayed on the screen: Verifies that the label of widget:ReviewAndConfirmDetails_Label_ReviewAndConfirmYourDetai_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_ReviewAndConfirmYourDetai_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_ReviewAndConfirmYourDetai_Text"
- waitForAnimationToEnd: {}
# 8. Verify widget ASText:ReviewAndConfirmDetails_Label_MakeSureThatAllTheDetails_Text is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Label_MakeSureThatAllTheDetails_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_MakeSureThatAllTheDetails_Text"
- waitForAnimationToEnd: {}
# 9. Verify widget ASText:ReviewAndConfirmDetails_Label_MakeSureThatAllTheDetails_Text is displayed on the screen: Verifies that the label of widget:ReviewAndConfirmDetails_Label_MakeSureThatAllTheDetails_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_MakeSureThatAllTheDetails_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_MakeSureThatAllTheDetails_Text"
- waitForAnimationToEnd: {}
# 10. Verify widget ASText:ReviewAndConfirmDetails_Label_PersonalDetails_Text is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Label_PersonalDetails_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_PersonalDetails_Text"
- waitForAnimationToEnd: {}
# 11. Verify widget ASText:ReviewAndConfirmDetails_Label_PersonalDetails_Text is displayed on the screen: Verifies that the label of widget:ReviewAndConfirmDetails_Label_PersonalDetails_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_PersonalDetails_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Label_PersonalDetails_Text"
- waitForAnimationToEnd: {}
# 12. Verify widget ASImage:ReviewAndConfirmDetails_Image_Minus_Image is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Image_Minus_Image renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "ReviewAndConfirmDetails_Image_Minus_Image"
- waitForAnimationToEnd: {}
# 13. Verify widget ASTextField:ReviewAndConfirmDetails_Input_FullName_Input is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Input_FullName_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_FullName_Input"
- waitForAnimationToEnd: {}
# 14. Verify widget ASTextField:ReviewAndConfirmDetails_Input_FullName_Input functionalities: Verifies that input widget:ReviewAndConfirmDetails_Input_FullName_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_FullName_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_FullName_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_FullName_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_FullName_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_FullName_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_FullName_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_FullName_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_FullName_Input"
- waitForAnimationToEnd: {}
# 15. Verify widget ASTextField:ReviewAndConfirmDetails_Input_IcNumber_Input is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Input_IcNumber_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_IcNumber_Input"
- waitForAnimationToEnd: {}
# 16. Verify widget ASTextField:ReviewAndConfirmDetails_Input_IcNumber_Input functionalities: Verifies that input widget:ReviewAndConfirmDetails_Input_IcNumber_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_IcNumber_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_IcNumber_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_IcNumber_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_IcNumber_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_IcNumber_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_IcNumber_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_IcNumber_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_IcNumber_Input"
- waitForAnimationToEnd: {}
# 17. Verify widget ASTextField:ReviewAndConfirmDetails_Input_DateOfBirth_Input is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Input_DateOfBirth_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_DateOfBirth_Input"
- waitForAnimationToEnd: {}
# 18. Verify widget ASTextField:ReviewAndConfirmDetails_Input_DateOfBirth_Input functionalities: Verifies that input widget:ReviewAndConfirmDetails_Input_DateOfBirth_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_DateOfBirth_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_DateOfBirth_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_DateOfBirth_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_DateOfBirth_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_DateOfBirth_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_DateOfBirth_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_DateOfBirth_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_DateOfBirth_Input"
- waitForAnimationToEnd: {}
# 19. Verify widget ASTextField:ReviewAndConfirmDetails_Input_UserName_Input is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Input_UserName_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input"
- waitForAnimationToEnd: {}
# 20. Verify widget ASTextField:ReviewAndConfirmDetails_Input_UserName_Input functionalities: Verifies that input widget:ReviewAndConfirmDetails_Input_UserName_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_UserName_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_UserName_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_UserName_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input"
- waitForAnimationToEnd: {}
# 21. Verify widget ASTextField:ReviewAndConfirmDetails_Input_UserName_Input_2 is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Input_UserName_Input_2 renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input_2"
- waitForAnimationToEnd: {}
# 22. Verify widget ASTextField:ReviewAndConfirmDetails_Input_UserName_Input_2 functionalities: Verifies that input widget:ReviewAndConfirmDetails_Input_UserName_Input_2 accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input_2"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input_2"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_UserName_Input_2"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input_2"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_UserName_Input_2"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input_2"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-ReviewAndConfirmDetails_Input_UserName_Input_2"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-ReviewAndConfirmDetails_Input_UserName_Input_2"
- waitForAnimationToEnd: {}
# 23. Verify widget ASDropDown:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDown is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDown renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDown"
- waitForAnimationToEnd: {}
# 24. Verify widget ASDropDown:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDown functionalities: Verifies that dropdown widget:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDown opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDown"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDown"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDown"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 25. Verify widget ASDropDown:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_2 is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_2 renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_2"
- waitForAnimationToEnd: {}
# 26. Verify widget ASDropDown:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_2 functionalities: Verifies that dropdown widget:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_2 opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_2"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_2"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_2"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 27. Verify widget ASDropDown:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_3 is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_3 renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_3"
- waitForAnimationToEnd: {}
# 28. Verify widget ASDropDown:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_3 functionalities: Verifies that dropdown widget:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_3 opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_3"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_3"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_3"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 29. Verify widget ASDropDown:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_4 is displayed on the screen: Verifies that the widget:ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_4 renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-ReviewAndConfirmDetails_Container_DropdownFieldAsdr_DropDo_4"
- waitForAnimationToEnd: {}
